# portfolio-drf

./: .gitignore  db.sqlite3  editorconfig  pyproject.toml  requirements.txt  setup.cfg  squash.sh
.ebextensions/: 02_python.config  django.config  python.config
portfolio/: pyproject.toml
src/: load.sh  manage.py  squash.sh  wsgi.py
src/portfolio/: asgi.py  dashboard.py  urls.py  wsgi.py
src/portfolio/app/comments/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/comments/migrations/: 0001_initial.py  0002_auto_20200401_1955.py
src/portfolio/app/common/: constants.py  forms.py  models.py  serializers.py  views.py
src/portfolio/app/companies/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/companies/migrations/: 0001_initial.py  (+4 more)
src/portfolio/app/courses/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/custom_admin/: dashboard.py  menu.py
src/portfolio/app/education/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/experience/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/profile/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/projects/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/resume/: urls.py  views.py
src/portfolio/app/schools/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/portfolio/app/skills/: admin.py  models.py  serializers.py  urls.py  views.py
src/portfolio/conf/: __init__.py  settings.py
src/portfolio/conf/settings/: __init__.py  admin.py  aws.py  base.py  ckeditor.py  constants.py  databases.py  dev.py  installed_apps.py  local.py  logging.py  paths.py  prod.py  restframework.py  templates.py  test.py  urls.py
src/portfolio/core/: __init__.py  context.py  logger.py
src/portfolio/fixtures/: .json  comments.json  companies.json  courses.json  education.json  experience.json  profile.json  projects.json  schools.json  skills.json
src/portfolio/lib/utils/: __init__.py  urls.py
tests/: conftest.py  pytest.ini  test_portfolio.py
tests/comments/: test_views.py
tests/companies/: test_views.py
tests/courses/: test_models.py  test_views.py
tests/education/: test_models.py  test_views.py
tests/experience/: test_models.py  test_views.py
tests/factories/: base.py  factories.py  fields.py
tests/profile/: test_views.py
tests/projects/: test_views.py
tests/schools/: test_views.py
tests/skills/: test_views.py
(+73 files in other folders)
