[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["nickmflorin <nickmflorin@gmail.com>"]
repository = "https://github.com/nickmflorin/portfolio-drf"
homepage = "https://github.com/nickmflorin/portfolio-drf"
packages = [
  { include = "portfolio", from = "src" },
]
license = "UNLICENSED"  # closed source, all rights reserved
include = [
  "README.rst",
  "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
